Fix: Application context error in update_titledb_job thread
Problem:
- ERROR:main:Failed to log activity: Working outside of application context
- RuntimeError when update_titledb_job (Thread-9) calls log_activity in exception handler
- db.session.rollback() needs Flask app context

Solution:
- Wrapped log_activity() call in try-catch block
- Added warning log if log_activity fails
- Prevents thread from crashing on log errors

Modified: app/templates/settings.html
- Added autocomplete="username" to igdbClientId input
- Removes DOM accessibility warnings for password forms

Impact:
- TitleDB update jobs won't crash on logging errors
- Better error handling in background threads
- No more console DOM warnings

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -964,9 +964,10 @@
                                                         <div class="field">
                                                             <label class="label is-small">Client ID</label>
                                                             <div class="control">
-                                                                <input class="input is-small" type="text"
+                                                                 <input class="input is-small" type="text"
                                                                     id="igdbClientId"
-                                                                    placeholder="Client ID do Twitch Dev Portal">
+                                                                    placeholder="Client ID do Twitch Dev Portal"
+                                                                    autocomplete="username">
                                                             </div>
                                                         </div>
                                                     </div>
