--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -422,22 +422,22 @@
                                     </ul>
                                 </nav>
 
-                                <div class="table-container">
-                                    <table class="table is-fullwidth is-hoverable is-size-7" id="filesExplorerTable">
-                                        <thead>
-                                            <tr>
-                                                <th>Nome do Arquivo</th>
-                                                <th>Caminho</th>
-                                                <th width="100">Tamanho</th>
-                                                <th width="120">Tipo</th>
-                                                <th width="100" class="has-text-centered">Status</th>
-                                                <th width="80" class="has-text-right">Ações</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <!-- Populated by JS -->
-                                        </tbody>
-                                    </table>
+                                 <div class="table-container">
+                                     <table class="table is-fullwidth is-hoverable is-size-7 table-fixed" id="filesExplorerTable" style="table-layout: fixed;">
+                                         <thead>
+                                             <tr>
+                                                 <th style="width: 35%;">Nome do Arquivo</th>
+                                                 <th style="width: 30%;">Caminho</th>
+                                                 <th style="width: 10%; text-align: right;">Tamanho</th>
+                                                 <th style="width: 10%;">Tipo</th>
+                                                 <th style="width: 10%; text-align: center;">Status</th>
+                                                 <th style="width: 5%; text-align: right;">Ações</th>
+                                             </tr>
+                                         </thead>
+                                         <tbody>
+                                             <!-- Populated by JS -->
+                                         </tbody>
+                                     </table>
                                 </div>
 
                                 <!-- Pagination Info -->
